magi/static/less/main.less
/* ... */
.youtube-embed-container {
    display: block;
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    iframe, object, embed {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

.flex-table {
    width: 100%;
    &, .flex-tr, .flex-td, .flex-th {
        box-sizing: border-box;
    }
    .flex-tr {
        display: flex;
        border-bottom: solid 1px @table-border-color;
        &.no-bottom {
            border-bottom: 0;
        }
    }
    .flex-td, .flex-th {
        flex: 1;
        padding: 8px;
        &> .btn-group {
            margin: 0;
            &> [class*='-link'] {
                padding: 0;
            }
        }
    }
    .flex-tr:last-child {
        .flex-td, .flex-th {
            border-bottom: 0;
        }
    }
    .flex-th {
        font-weight: bold;
    }
    &.with-border, &.with-top-border {
        .flex-tr:first-child {
            border-top: solid 1px @table-border-color;
        }
    }
    &.with-border, &.with-bottom-border {
        .flex-tr:last-child {
            border-bottom: solid 1px @table-border-color;
        }
    }
}

@media(max-width: @screen-xs-max) {
    .flex-table {
        .flex-tr {
            flex-wrap: wrap;
            .flex-collapse-sm {
                width: 100%;
                flex: unset;
                padding: 0 0 8px 0;
                &:first-child {
                    padding: 8px 0;
                }
                &:empty {
                    display: none;
                }
            }
        }
    }
}

.about-flex-table, .flex-table.collection-table {
    @icon-size: 34px;
    &, .flex-tr, .flex-td, .flex-th {
        justify-content: center;
    }
    // Icon td
    .about-flex-td-icon {
        flex-basis: @icon-size + (8px * 2);
        flex-grow: 0;
        text-align: center;
        font-size: @icon-size;
        img {
            width: @icon-size + (8px * 2);
            margin: -8px;
        }
    }
    // Title th & content td
    .about-flex-th-title, .about-flex-td-content {
        padding: ((@icon-size / 2) + 2px) 8px;
    }
    // Title th
    .about-flex-th-title {
        //flex: 4;
    }
    // Content td
    .about-flex-td-content {
        //flex: 6;
        text-align: right;
        &.spread-across {
            .verbose-name {
                text-align: left;
                display: block;
                font-weight: bold;
                padding-bottom: (@icon-size / 2) + 2px;
            }
        }
    }
    // Field title table view only)
    .field-title {
        font-weight: bold;
        h4 {
            padding: 0;
            margin: 0;
        }
    }
    .flex-collapse-sm .field-title {
        color: @mainColor;
        h4 {
            padding: 5px 0 2px 0;
            margin: 0;
        }
    }
    // Field content
    .field-content {
        > .row {
            margin-bottom: (@icon-size / 2) + 2px;
        }
        .flaticon-delete {
            color: @brand-danger;
        }
        .flaticon-checked {
            color: @brand-success;
        }
        .btn .flaticon-checked {
            color: inherit;
        }
        ul.list-group {
            margin: 0;
        }
        .list-wrapper {
            display: block;
            &.with_bullet {
                ul, ol {
                    float: right;
                    text-align: left;
                }
            }
            &:not(.with_bullet) {
                ul li, ol li {
                    list-style-type: none;
                }
            }
        }
        .text_with_link_wrapper {
            display: flex;
            justify-content: flex-end;
            align-items: center;
            width: 100%;
        }
        .text_with_link {
            display: block;
            vertical-align: middle;
        }
        .text_with_link_image {
            display: block;
            padding-left: 10px;
            max-height: 200px;
            vertical-align: middle;
        }
        .image {
            max-width: 100%;
        }
        .color-viewer {
            border-radius: 50%;
            width: 30px;
            height: 30px;
            margin-left: 10px;
            display: inline-block;
            vertical-align: middle;
        }
        .itunes {
            [href="#play"], .itunes-details {
                display: inline-block;
                vertical-align: middle;
            }
            [href="#play"] {
                font-size: 2em;
                padding-left: 20px;
                &:hover, &:focus {
                    text-decoration: none;
                }
            }
        }
        dl:not(.inline) {
            dt {
                padding: 8px 0;
            }
        }
    }

    .field-buttons {
        clear: both;
        .btn-link-muted:last-child {
            padding-right: 0;
        }
    }

}

.popover-content {
    .about-flex-table .field-content .text_with_link_image,
    .flex-table.collection-table .field-content .text_with_link_image {
        max-width: 100%;
    }
}
/* ... */

